.happypack/s-1172778579
SyntaxError: Unexpected token, expected } (55:58)

[0m [90m 53 | [39m              [33m<[39m[33m/[39m[33mCard[39m[33m>[39m
 [90m 54 | [39m              [33m<[39m[33mDivider[39m[33m/[39m[33m>[39m {isAuthenticated() [33m&&[39m [33m<[39m[33mCard[39m[33m>[39m
[31m[1m>[22m[39m[90m 55 | [39m                [33m<[39m[33mCardHeader[39m title[33m=[39m{isAuthenticated()[33m.[39mname isAuthenticated()[33m.[39mlastname} subtitle[33m=[39m[32m"01/01/2017"[39m avatar[33m=[39m[32m"/avatar3.png"[39m[33m/[39m[33m>[39m
 [90m    | [39m                                                          [31m[1m^[22m[39m
 [90m 56 | [39m                [33m<[39m[33mCardText[39m className[33m=[39m[32m"box-comment textarea"[39m[33m>[39m
 [90m 57 | [39m                  [33m<[39m[33mTextField[39m hintText[33m=[39m[32m"Escriba aquí su comentario"[39m floatingLabelText[33m=[39m[32m"Comentario"[39m fullWidth[33m=[39m{[36mtrue[39m} multiLine[33m=[39m{[36mtrue[39m} rows[33m=[39m{[35m3[39m}[33m/[39m[33m>[39m
 [90m 58 | [39m                [33m<[39m[33m/[39m[33mCardText[39m[33m>[39m[0m

BabelLoaderError: SyntaxError: Unexpected token, expected } (55:58)

[0m [90m 53 | [39m              [33m<[39m[33m/[39m[33mCard[39m[33m>[39m
 [90m 54 | [39m              [33m<[39m[33mDivider[39m[33m/[39m[33m>[39m {isAuthenticated() [33m&&[39m [33m<[39m[33mCard[39m[33m>[39m
[31m[1m>[22m[39m[90m 55 | [39m                [33m<[39m[33mCardHeader[39m title[33m=[39m{isAuthenticated()[33m.[39mname isAuthenticated()[33m.[39mlastname} subtitle[33m=[39m[32m"01/01/2017"[39m avatar[33m=[39m[32m"/avatar3.png"[39m[33m/[39m[33m>[39m
 [90m    | [39m                                                          [31m[1m^[22m[39m
 [90m 56 | [39m                [33m<[39m[33mCardText[39m className[33m=[39m[32m"box-comment textarea"[39m[33m>[39m
 [90m 57 | [39m                  [33m<[39m[33mTextField[39m hintText[33m=[39m[32m"Escriba aquí su comentario"[39m floatingLabelText[33m=[39m[32m"Comentario"[39m fullWidth[33m=[39m{[36mtrue[39m} multiLine[33m=[39m{[36mtrue[39m} rows[33m=[39m{[35m3[39m}[33m/[39m[33m>[39m
 [90m 58 | [39m                [33m<[39m[33m/[39m[33mCardText[39m[33m>[39m[0m

    at transpile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:63:13)
    at Object.module.exports (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/babel-loader/lib/index.js:163:20)
    at applySyncOrAsync (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:341:21)
    at apply (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:268:5)
    at /home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:131:7
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:184:14)
    at applyPitchLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:192:14)
    at applyPitchLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:222:4)
    at applyLoaders (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/applyLoaders.js:116:3)
    at HappyWorker.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyWorker.js:32:3)
    at Object.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyForegroundThreadPool.js:61:14)
    at HappyPlugin.compileAndUpdateCache (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:344:14)
    at HappyPlugin.compileInForeground (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:321:25)
    at HappyPlugin.compile (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyPlugin.js:237:32)
    at Object.HappyLoader (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/happypack/lib/HappyLoader.js:42:15)
    at LOADER_EXECUTION (/home/leo/htdocs/biodiversity_catalogue_v2_frontend/node_modules/loader-runner/lib/LoaderRunner.js:119:14)